--- a/_scss/_modal.scss
+++ b/_scss/_modal.scss
@@ -215,6 +215,7 @@
 
 .h2--shareTitle {
   margin-top: -100px;
+  color: $black;
 }
 
 .shareWrapper {
@@ -255,25 +256,25 @@
 }
 
 .shareButton--twitter {
-  background-image: url(../images/twitter.svg);
+  background-image: url(../images/twitter--black.svg);
 }
 
 .shareButton--facebook {
-  background-image: url(../images/facebook.svg);
+  background-image: url(../images/facebook--black.svg);
 }
 
 .shareButton--linkedin {
-  background-image: url(../images/linkedin.svg);
+  background-image: url(../images/linkedin--black.svg);
 }
 
 .shareButton--buffer {
-  background-image: url(../images/buffer.svg);
+  background-image: url(../images/buffer--black.svg);
 }
 
 .shareButton--hackernews {
-  background-image: url(../images/ycombinator.svg);
+  background-image: url(../images/ycombinator--black.svg);
 }
 
 .shareButton--pocket {
-  background-image: url(../images/pocket.svg);
+  background-image: url(../images/pocket--black.svg);
 }
