--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2427,6 +2427,7 @@ body {
 
 .h2--shareTitle {
   margin-top: -100px;
+  color: #000;
 }
 
 .shareWrapper {
@@ -2482,27 +2483,27 @@ body {
 }
 
 .shareButton--twitter {
-  background-image: url(../images/twitter.svg);
+  background-image: url(../images/twitter--black.svg);
 }
 
 .shareButton--facebook {
-  background-image: url(../images/facebook.svg);
+  background-image: url(../images/facebook--black.svg);
 }
 
 .shareButton--linkedin {
-  background-image: url(../images/linkedin.svg);
+  background-image: url(../images/linkedin--black.svg);
 }
 
 .shareButton--buffer {
-  background-image: url(../images/buffer.svg);
+  background-image: url(../images/buffer--black.svg);
 }
 
 .shareButton--hackernews {
-  background-image: url(../images/ycombinator.svg);
+  background-image: url(../images/ycombinator--black.svg);
 }
 
 .shareButton--pocket {
-  background-image: url(../images/pocket.svg);
+  background-image: url(../images/pocket--black.svg);
 }
 
 .textInput {
