config site:baseurl + test footer

--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -2,7 +2,7 @@
   <div class="container container--content">
     <h3 class="u-alignCenter">Stay in touch</h3>
     <p>
-      Hi, I'm <a href="/about/">Byoute</a>, software developer + VFX TD. And I got a lovely kitten. 
+      Hi, I'm <a href="{{ site.baseurl }}about/">Byoute</a>, software developer + VFX TD. And I got a lovely kitten. 
     </p>
     <div class="newsletterForm-wrapper">
       <!-- Begin MailChimp Signup Form -->
