--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
     {% if page.url == '/index.html' %}
       {% include subscribe.html %}
       {% include footer.html %}
+    {% else %}
+    <title>NOOOOOPE</title>
     {% endif %}
 
     {% include footer-scripts.html %}
