subscribe + footer in index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,10 @@
       {% include sidebar-toggle.html %}
     {% endif %}
 
-    {% if page.url != '/index.html' %}
+<!--     {% if page.url != '/index.html' %}
       {% include subscribe.html %}
       {% include footer.html %}
-    {% endif %}
+    {% endif %} -->
 
     {% include footer-scripts.html %}
   </body>
