still trying to fix footer on main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,12 @@
       {% include sidebar-toggle.html %}
     {% endif %}
 
-<!--     {% if page.url != '/index.html' %}
+    {% if page.url == '/index.html' %}
       {% include subscribe.html %}
       {% include footer.html %}
-    {% endif %} -->
+    {% else %}
+      <title>NOOOOOPE</title>
+    {% endif %}
 
     {% include footer-scripts.html %}
   </body>
