--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,12 +17,12 @@
     {% endif %}
 
     {% if page.url == '/index.html' %}
-      {% include subscribe.html %}
+<!--       {% include subscribe.html %} -->
       {% include footer.html %}
     {% else %}
       <title>NOOOOOPE</title>
     {% endif %}
 
-    {% include footer-scripts.html %}
+<!--     {% include footer-scripts.html %} -->
   </body>
 </html>
