test default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       {% include subscribe.html %}
       {% include footer.html %}
     {% else %}
-    <title>YEEEEEEEEEAH</title>
+    <title>YEEEEEEEEEAH  {{ page.url }}</title>
     {% endif %}
 
     {% include footer-scripts.html %}
