test footer on main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       {% include sidebar-toggle.html %}
     {% endif %}
 
-    {% if page.url == '/index.html' %}
+    {% if page.url == site.baseurl %}
       {% include subscribe.html %}
       {% include footer.html %}
     {% else %}
