--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2103,7 +2103,7 @@ body {
 
 .socialAccountList {
   list-style: none;
-  margin: 1.5rem auto;
+  margin: auto;
   padding-left: 0;
   width: 50%;
 }
