--- a/_includes/head.html
+++ b/_includes/head.html
@@ -89,7 +89,7 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}assets/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}assets/images/pixellou.jpg">
+  <link rel="shortcut icon" href="{{ site.baseurl }}assets/images/icons/pixellou.jpg">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
