--- a/_scss/_modal.scss
+++ b/_scss/_modal.scss
@@ -67,7 +67,7 @@
 	position: absolute;
   top: 0;
   display: block;
-  background-image: url(../images/heart.svg);
+  background-image: url(../images/icons/heart.svg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 60%;
@@ -256,25 +256,25 @@
 }
 
 .shareButton--twitter {
-  background-image: url(../images/twitter--black.svg);
+  background-image: url(../images/icons/twitter--black.svg);
 }
 
 .shareButton--facebook {
-  background-image: url(../images/facebook--black.svg);
+  background-image: url(../images/icons/facebook--black.svg);
 }
 
 .shareButton--linkedin {
-  background-image: url(../images/linkedin--black.svg);
+  background-image: url(../images/icons/linkedin--black.svg);
 }
 
 .shareButton--buffer {
-  background-image: url(../images/buffer--black.svg);
+  background-image: url(../images/icons/buffer--black.svg);
 }
 
 .shareButton--hackernews {
-  background-image: url(../images/ycombinator--black.svg);
+  background-image: url(../images/icons/ycombinator--black.svg);
 }
 
 .shareButton--pocket {
-  background-image: url(../images/pocket--black.svg);
+  background-image: url(../images/icons/pocket--black.svg);
 }
