--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -499,7 +499,7 @@ body {
 }
 
 .brandLogo {
-  background-image: url(../images/logo-white.svg);
+  background-image: url(../images/icons/logo-white.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -514,12 +514,12 @@ body {
 }
 
 .brandLogo--black {
-  background-image: url(../images/logo-black.svg);
+  background-image: url(../images/icons/logo-black.svg);
 }
 
 .textLogo {
   display: block;
-  background-image: url(../images/logo-text-black.svg);
+  background-image: url(../images/icons/logo-text-black.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -529,7 +529,7 @@ body {
 }
 
 .textLogo--white {
-  background-image: url(../images/logo-text-white.svg);
+  background-image: url(../images/icons/logo-text-white.svg);
 }
 
 .textLogo--sidebar {
