dots background main page + gray footer

--- a/_scss/_content.scss
+++ b/_scss/_content.scss
@@ -202,7 +202,7 @@
 // Newsletter subscription area
 .section--subscribe {
   width: 100%;
-  background: $white;
+  background: $gray-bg;
   padding: $leading 0 0;
   position: relative;
   z-index: $zIndex-4--posts-wrapper;
@@ -219,7 +219,7 @@
 // Footer
 .section--footer {
   width: 100%;
-  background: $white;
+  background: $gray-bg;
   padding: $leading 0 2*$leading;
   position: relative;
   z-index: $zIndex-4--posts-wrapper;
