--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -9,15 +9,7 @@
       <div id="mc_embed_signup">
         <form action="http://eepurl.com/bPExPz" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
- <!--             <div class="mc-field-group">
-              <input type="email" value="" name="EMAIL" class="textInput textInput--large" id="mce-EMAIL" placeholder="Your email address">
-            </div>
-            <div id="mce-responses" class="clear">
-              <div class="response" id="mce-error-response" style="display:none"></div>
-              <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_4f0b205fdf4e47d07c9e42336_8155a0b615" tabindex="-1" value=""></div> --> -->
-            <div class="clear u-alignCenter"><input type="submit" value="Get new blog posts by email" name="subscribe" id="mc-embedded-subscribe" class="button button--primary"></div>
+            <div class="clear u-alignCenter"><input type="submit" value="Subscribe to get new blog posts by email" name="subscribe" id="mc-embedded-subscribe" class="button button--primary"></div>
           </div>
         </form>
       </div>
