--- a/_scss/_colors.scss
+++ b/_scss/_colors.scss
@@ -18,7 +18,9 @@ $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
 $body-bg:               #fff !default;
-$frontpage-body-bg:     #f2f2f2 !default;
+$frontpage-body-bg:     #ffaaaa !default;
+$gray-bg:				#f6f6f6 !default;
+$gray-dot:				#b9b9b9 !default;
 $text-color:            rgba(0,0,0,0.8) !default;
 
 $link-color:            $text-color !default;
