--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -7,7 +7,7 @@
     <div class="newsletterForm-wrapper">
       <!-- Begin MailChimp Signup Form -->
       <div id="mc_embed_signup">
-        <form action="http://eepurl.com/bPExPz" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <form action="http://eepurl.com/bPEKF5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
             <div class="clear u-alignCenter"><input type="submit" value="Subscribe to get new blog posts by email" name="subscribe" id="mc-embedded-subscribe" class="button button--primary"></div>
           </div>
