--- a/source/_includes/banner.html
+++ b/source/_includes/banner.html
@@ -2,11 +2,11 @@
 
   <img src="{{ site.author.image | prepend: site.baseurl  }}" alt="author thumb" class="dot animated hinge fadeInDown">
 
-  <h2 class="animated hinge fadeInDown" itemscope itemtype="http://schema.org/Person">Hello, my name is <strong itemprop="name">{{ site.name }}</strong>I am <em itemprop="jobTitle">Front-end</em> and like coffee!</h2>
+  <h2 class="animated hinge fadeInDown" itemscope itemtype="http://schema.org/Person">Hello, my name is <strong itemprop="name">{{ site.name }}</strong>I am <em itemprop="jobTitle">Software Developer</em> and <em itemprop="jobTitle">TD</em> in a post production studio!</h2>
 
   <nav class="actions">
     <a href="{{ "/about" | prepend: site.baseurl }}" class="button ghost">About</a>
-    <a href="{{ site.repo }}/archive/master.zip" class="button ghost">Download</a>
+<!--     <a href="{{ site.repo }}/archive/master.zip" class="button ghost">Download</a> -->
   </nav>
 
 </section>
