--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -12,7 +12,7 @@ comments: true
   <header class="post-header">
     <h1>{{ page.title }}</h1>
     <div class="post-meta">
-      <time datetime="2015-10-13">
+      <time datetime="{{ page.date | date:"%Y-%m-%d" }}">
         <i class="fa fa-calendar-o"></i> <time datetime="{{ page.date | date:"%Y-%m-%d" }}"> {{ page.date | date:"%Y-%m-%d" }}
       </time>
       <span>
@@ -38,6 +38,36 @@ comments: true
           {% assign categories_content = '' %}
         {% endif %}
         {{ categories_content }}
+      </span>
+    </div>
+    <div class="post-meta">
+        <span>
+          {% if post.tags.size > 0 %}
+            {% capture tags_content %}
+              <i class="fa fa-tags"></i>
+            {% endcapture %}
+            {% for post_tag in post.tags %}
+              {% for data_tag in site.data.tags %}
+                {% if data_tag.slug == post_tag %}
+                  {% assign tag = data_tag %}
+                {% endif %}
+              {% endfor %}
+
+              {% if tag %}
+                {% capture tags_content_temp %}
+                  {{ tags_content }}
+                  <a href="/tag/{{ tag.slug }}/">{{ tag.name }}</a>
+                  {% if forloop.last == false %}
+                    , 
+                  {% endif %}
+                {% endcapture %}
+                {% assign tags_content = tags_content_temp %}
+              {% endif %}
+            {% endfor %}
+          {% else %}
+            {% assign tags_content = '' %}
+          {% endif %}
+          {{ tags_content }}
       </span>
     </div>
   </header>
