--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -4,11 +4,13 @@
     <h1 class="post-title"><a href="{{ post.url | prepend: site.baseurl }}" title="Permalink to {{ post.title }}">{{ post.title }}</a></h1>
   </header>
 
-  <p><a href="{{ post.url | prepend: site.baseurl }}" title="Permalink to {{ post.title }}" class="read-more">{{ post.content | strip_html | truncatewords: 50 }}</a></p>
+<!--   <p><a href="{{ post.url | prepend: site.baseurl }}" title="Permalink to {{ post.title }}" class="read-more">{{ post.content | strip_html | truncatewords: 50 }}</a></p> -->
+
+  <p><a href="{{ post.url | prepend: site.baseurl }}" title="Permalink to {{ post.title }}" class="read-more">{{ post.excerpt}}</a></p>
 
   <footer class="post-meta">
     <time datetime="{{ post.date | date:"%Y-%m-%d" }}">
-      <i class="fa fa-calendar-o"></i> {{ page.date | date:"%Y-%m-%d" }}
+      <i class="fa fa-calendar-o"></i> {{ post.date | date:"%Y-%m-%d" }}
     </time>
 
     <span>
@@ -17,7 +19,9 @@
 
     <span>
         {% if post.categories.size > 0 %}
-          {% capture categories_content %}<i class="fa fa-folder-open-o"></i> {% endcapture %}
+          {% capture categories_content %}
+            <i class="fa fa-folder-open-o"></i>
+          {% endcapture %}
           {% for post_category in post.categories %}
             {% for data_category in site.data.categories %}
               {% if data_category.slug == post_category %}
@@ -26,7 +30,13 @@
             {% endfor %}
 
             {% if category %}
-              {% capture categories_content_temp %}{{ categories_content }}<a href="/category/{{ category.slug }}/">{{ category.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+              {% capture categories_content_temp %}
+                {{ categories_content }}
+                <a href="/category/{{ category.slug }}/">{{ category.name }}</a>
+                {% if forloop.last == false %}
+                  , 
+                {% endif %}
+              {% endcapture %}
               {% assign categories_content = categories_content_temp %}
             {% endif %}
           {% endfor %}
@@ -36,4 +46,33 @@
         {{ categories_content }}
     </span>
   </footer>
+
+  <span class="post-meta">
+      {% if post.tags.size > 0 %}
+        {% capture tags_content %}
+          <i class="fa fa-tags"></i>
+        {% endcapture %}
+        {% for post_tag in post.tags %}
+          {% for data_tag in site.data.tags %}
+            {% if data_tag.slug == post_tag %}
+              {% assign tag = data_tag %}
+            {% endif %}
+          {% endfor %}
+
+          {% if tag %}
+            {% capture tags_content_temp %}
+              {{ tags_content }}
+              <a href="/tag/{{ tag.slug }}/">{{ tag.name }}</a>
+              {% if forloop.last == false %}
+                , 
+              {% endif %}
+            {% endcapture %}
+            {% assign tags_content = tags_content_temp %}
+          {% endif %}
+        {% endfor %}
+      {% else %}
+        {% assign tags_content = '' %}
+      {% endif %}
+      {{ tags_content }}
+  </span>
 </article>
