footer with email and website + header home about + banner just pic desc

--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -7,21 +7,21 @@
           <i class="fa fa-github"></i>
         </a>
       </li>
-<!--       <li>
-        <a href="{{ site.author.facebook }}" class="icon-facebook" target="_blank">
-          <i class="fa fa-facebook"></i>
+      <li>
+        <a href="{{ site.author.email }}" class="icon-facebook" target="_blank">
+          <i class="fa fa-envelope"></i>
         </a>
-      </li> -->
+      </li>
       <li>
         <a href="{{ site.author.twitter }}" class="icon-twitter" target="_blank">
           <i class="fa fa-twitter"></i>
         </a>
       </li>
-<!--       <li>
-        <a href="{{ site.author.instagram }}" class="icon-instagram" target="_blank">
-          <i class="fa fa-instagram"></i>
+      <li>
+        <a href="{{ site.author.url }}" class="icon-instagram" target="_blank">
+          <i class="fa fa-globe"></i>
         </a>
-      </li> -->
+      </li>
       <li>
         <a href="{{ site.author.linkedin }}" class="icon-linkedin" target="_blank">
           <i class="fa fa-linkedin"></i>
@@ -29,10 +29,10 @@
       </li>
     </ul>
 
-    <p>
+<!--     <p>
       <q>{{ site.thought.text }}</q>
       <small>– {{ site.thought.author }}</small>
-    </p>
+    </p> -->
 
     <small class="clearfix">
       Made with <a href="http://jekyllrb.com" target="_blank">Jekyll</a> • <a href="{{ site.repo }}" target="_blank">Open source <i class="fa fa-heart"></i></a>
