--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -8,7 +8,7 @@
         </a>
       </li>
       <li>
-        <a href="{{ site.author.email }}" class="icon-facebook" target="_blank">
+        <a href="mailto:{{ site.author.email }}" class="icon-facebook" target="_blank">
           <i class="fa fa-envelope"></i>
         </a>
       </li>
