--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -49,10 +49,10 @@
 <meta name="twitter:image:src" content="{{ page_image }}">
 
 <!-- Favicons -->
-<link rel="apple-touch-icon" sizes="114x114" href="{{ 'ico/apple-touch-icon-114.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
-<link rel="apple-touch-icon" sizes="72x72" href="{{ 'ico/apple-touch-icon-72.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
-<link rel="apple-touch-icon" href="{{ 'ico/apple-touch-icon-57.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
-<link rel="shortcut icon" href="{{ 'ico/favicon.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
+<!-- <link rel="apple-touch-icon" sizes="114x114" href="{{ 'ico/apple-touch-icon-114.png' | asset_path | prepend: site.baseurl | prepend: site.url }}"> -->
+<!-- <link rel="apple-touch-icon" sizes="72x72" href="{{ 'ico/apple-touch-icon-72.png' | asset_path | prepend: site.baseurl | prepend: site.url }}"> -->
+<!-- <link rel="apple-touch-icon" href="{{ 'ico/apple-touch-icon-57.png' | asset_path | prepend: site.baseurl | prepend: site.url }}"> -->
+<!-- <link rel="shortcut icon" href="{{ 'ico/favicon.png' | asset_path | prepend: site.baseurl | prepend: site.url }}"> -->
 
 <!-- rel prev and next -->
 {% if paginator.previous_page %}
