date format day-month-year

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -10,7 +10,7 @@
 
   <footer class="post-meta">
     <time datetime="{{ post.date | date:"%Y-%m-%d" }}">
-      <i class="fa fa-calendar-o"></i> {{ post.date | date:"%Y-%m-%d" }}
+      <i class="fa fa-calendar-o"></i> {{ post.date | date:"%d-%m-%Y" }}
     </time>
 
     <span>
