--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -52,7 +52,8 @@
 <link rel="catpixel" sizes="114x114" href="{{ 'ico/catpixel-114.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
 <link rel="catpixel" sizes="72x72" href="{{ 'ico/catpixel-72.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
 <link rel="catpixel" href="{{ 'ico/catpixel-57.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
-<link rel="shortcut icon" href="{{ 'ico/catpixel-favicon.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
+<link rel="shortcut icon" type="image/png" href="{{ 'ico/catpixel-favicon.png' | asset_path | prepend: site.baseurl | prepend: site.url }}">
+<link rel="icon" type="image/png" href="{{ 'ico/catpixel-favicon.png' | asset_path | prepend: site.baseurl | prepend: site.url }}" />
 
 <!-- rel prev and next -->
 {% if paginator.previous_page %}
