--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -22,7 +22,7 @@
 <link href="http://gmpg.org/xfn/11" rel="profile">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
-<meta name="theme-color" content="#005344">
+<meta name="theme-color" content="#A63B4D">
 
 <title>{{ page_title }}</title>
 
