--- a/_assets/sass/settings/_variables.scss
+++ b/_assets/sass/settings/_variables.scss
@@ -12,6 +12,7 @@ $gutter: 30px !default;
 $gutter-padding: ($gutter/2) !default;
 $default-feature: min-width;
 
+$container-phone-width  : 90% !default;
 $container-tablet-width  : 90% !default;
 $container-desktop-width : 48em !default;
 
