--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -222,6 +222,9 @@ pre {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto; }
+  @media (min-width: 30em) {
+    .container {
+      width: 90%; } }
   @media (min-width: 37em) {
     .container {
       width: 90%; } }
@@ -1052,7 +1055,10 @@ body.modal--open {
       padding-right: 6em; } }
   .footer .icons {
     margin-bottom: 3em;
-    display: none; }
+    display: inherit; }
+    @media (min-width: 30em) {
+      .footer .icons {
+        display: inline; } }
     @media (min-width: 37em) {
       .footer .icons {
         display: inline-block; } }
